--- a/.zpreztorc
+++ b/.zpreztorc
@@ -59,6 +59,7 @@ zstyle ':prezto:module:editor' key-bindings 'vi'
 
 # Ignore submodules when they are 'dirty', 'untracked', 'all', or 'none'.
 # zstyle ':prezto:module:git:status:ignore' submodules 'all'
+zstyle ':prezto:module:git:alias' skip 'yes' # disable 
 
 #
 # GNU Utility
