--- a/.zpreztorc
+++ b/.zpreztorc
@@ -50,6 +50,8 @@ zstyle ':prezto:load' pmodule \
 # Set the key mapping style to 'emacs' or 'vi'.
 zstyle ':prezto:module:editor' key-bindings 'vi'
 
+zstyle ':prezto:module:prompt' show-return-val 'no'
+
 # Auto convert .... to ../..
 # zstyle ':prezto:module:editor' dot-expansion 'yes'
 
