--- a/.zpreztorc
+++ b/.zpreztorc
@@ -97,7 +97,13 @@ zstyle ':prezto:module:history-substring-search:color' found ''
 # Set the prompt theme to load.
 # Setting it to 'random' loads a random theme.
 # Auto set to 'off' on dumb terminals.
-zstyle ':prezto:module:prompt' theme 'sorin'
+
+fpath=(
+  ${HOME}/dotfiles/custom-prezto-theme
+  ${fpath}
+)
+zstyle ':prezto:module:prompt' theme 'ykpy'
+# zstyle ':prezto:module:prompt' theme 'sorin'
 
 #
 # Ruby
