--- a/.screenrc
+++ b/.screenrc
@@ -1,4 +1,5 @@
 defutf8 on
+defkanji utf-8
 defencoding utf8
 encoding utf8 utf8
 
@@ -11,7 +12,7 @@ escape ^Z^Z # C-z C-z : send ^Z to process
 # $ brew tap homebrew/dupes
 # $ brew install screen
 defbce on
-term "screen-256color"
+term xterm-256color
 
 # Protection from attacks
 multiuser off
@@ -22,14 +23,8 @@ autodetach on
 startup_message off
 altscreen on
 
-# set $TERM env
-term screen
-
 bind w windowlist -b
 defscrollback 8192
-
-shell $SHELL
-shelltitle '$ |shell'
 
 # message display time
 msgwait 3
@@ -44,3 +39,8 @@ sorendition "+rb .R"
 
 # change directory to home
 chdir
+
+screen
+screen
+screen
+select 0
