--- a/.gitconfig
+++ b/.gitconfig
@@ -21,6 +21,7 @@
     s = status
     d = diff
     ds = diff --staged
+    c = commit
     gsub = !/usr/local/bin/git-gsub.rb
 [pager]
     log = diff-highlight|less -c
