--- a/.gitconfig
+++ b/.gitconfig
@@ -3,7 +3,7 @@
 [core]
     editor = vim
     quotepath = false
-    excludesfile = ~/.gitignore
+    excludesfile = ~/.gitignore_global
     precomposeunicode = true
     autocrlf = false
 [rebase]
