--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,9 +29,7 @@ bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft=
 
 setw -g mode-keys vi
 
-bind -T copy-mode-vi v send -X begin-selection
-bind -T copy-mode-vi V send -X select-line
 bind -T copy-mode-vi C-v send -X rectangle-toggle
-bind -T copy-mode-vi y send -X copy-selection
-bind -T copy-mode-vi Y send -X copy-line
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind-key C-p paste-buffer
