--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,8 +19,9 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+bind-key c new-window -c "#{pane_current_path}"
 
 set-option -g base-index 1
 
