--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,10 +4,10 @@ set -g terminal-overrides 'xterm:colors=256'
 set -g prefix C-q
 unbind C-b
 
-set-option -g status-position top
+set-option -g status-position bottom
 
 set-option -g status-left '#H:[#P]'
-set-option -g status-right '#(wifi) #(battery --tmux) [%Y-%m-%d(%a) %H:%M]'
+set-option -g status-right '[%Y-%m-%d(%a) %H:%M]'
 
 bind h select-pane -L
 bind j select-pane -D
