--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,11 +3,14 @@ set -g terminal-overrides 'xterm:colors=256'
 
 set -g prefix C-q
 unbind C-b
+set -s escape-time 0
 
 set-option -g status-position bottom
 
-set-option -g status-left '#H:[#P]'
-set-option -g status-right '[%Y-%m-%d(%a) %H:%M]'
+# set-option -g status-left '#H:[#P]'
+# set-option -g status-right '[%Y-%m-%d(%a) %H:%M]'
+set-option -g status-left '#H '
+set-option -g status-right ''
 
 bind h select-pane -L
 bind j select-pane -D
