--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,10 +7,13 @@ set -s escape-time 0
 
 set-option -g status-position bottom
 
-# set-option -g status-left '#H:[#P]'
-# set-option -g status-right '[%Y-%m-%d(%a) %H:%M]'
-set-option -g status-left '#H '
-set-option -g status-right ''
+# set-option -g status-left '#H'
+set-option -g status-left ''
+set-option -g status-right '[%Y-%m-%d %H:%M]'
+
+set-option -g window-status-current-format '#I#[fg=white,bold][#W]#[default]'
+set-option -g window-status-format '#I[#W]'
+set-option -g status-interval 1
 
 bind h select-pane -L
 bind j select-pane -D
