--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,7 @@ set -g prefix C-q
 unbind C-b
 set -s escape-time 0
 
-set-option -g status-position bottom
+set-option -g status-position top
 
 # set-option -g status-left '#H'
 set-option -g status-left ''
