--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,4 +39,4 @@ setw -g mode-keys vi
 bind -T copy-mode-vi C-v send -X rectangle-toggle
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
-bind-key C-p paste-buffer
+# bind-key C-p paste-buffer
