--- a/conf/.gitconfig
+++ b/conf/.gitconfig
@@ -9,6 +9,8 @@
     autostash = true
 [push]
     default = simple
+[pull]
+    rebase = false
 [alias]
     log-graph = log --graph --all --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cd) %C(bold blue)<%an>%Creset' --abbrev-commit --date=format-local:'%Y/%m/%d %H:%M:%S'
     d1 = diff HEAD~
