--- a/conf/coc-settings.json
+++ b/conf/coc-settings.json
@@ -12,7 +12,7 @@
     "typescript.tsx",
     "json"
   ],
-  "suggest.floatEnable": true,
+  "suggest.floatEnable": false,
   "suggest.maxCompleteItemCount": 20,
   "suggest.noselect": false,
   "languageserver": {
