--- a/conf/.tmux.conf
+++ b/conf/.tmux.conf
@@ -7,13 +7,14 @@ set -s escape-time 0
 
 set-option -g status-position top
 
-# set-option -g status-left '#H'
 set-option -g status-left ''
-set-option -g status-right '[%Y-%m-%d %H:%M]'
+set-option -g status-right ''
+# set-option -g status-right '[%Y-%m-%d %H:%M]'
 
 set-option -g window-status-current-format '#I#[fg=white,bold][#W]#[default]'
 set-option -g window-status-format '#I[#W]'
 set-option -g status-interval 1
+set-option -g renumber-windows on
 
 bind h select-pane -L
 bind j select-pane -D
@@ -25,8 +26,8 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-bind | split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
+bind s split-window -v -c "#{pane_current_path}"
 bind-key c new-window -c "#{pane_current_path}"
 
 set-option -g base-index 1
