--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,9 +35,10 @@ bind o run-shell "open #{pane_current_path}"
 bind-key C command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
 
 # close pane
-bind-key    C-x   kill-pane
+bind-key C-x kill-pane
 
 bind-key t last-window
+bind-key m copy-mode
 
 bind v split-window -h -c "#{pane_current_path}"
 bind s split-window -v -c "#{pane_current_path}"
