--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,10 +48,10 @@ set-option -g base-index 1
 
 set-option -g mouse on
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
+unbind -T copy-mode-vi MouseDragEnd1Pane
 
 setw -g mode-keys vi
 
 bind -T copy-mode-vi C-v send -X rectangle-toggle
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
-# bind-key C-p paste-buffer
+bind-key -T copy-mode-vi y send-keys -X copy-pipe "pbcopy"
