tmux window title

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,7 +15,8 @@ set -g status-left-length 20
 
 set-option -g status-position bottom
 
-set-option -g window-status-current-format '#I#[fg=bold][#W]#[default]'
+set-option -g window-status-format '#I#{?#{m:#W,zsh},#(basename #{pane_current_path}),#(basename #{pane_current_path})(#W)}#F'
+set-option -g window-status-current-format '#I#[fg=colour13,bold]#{?#{m:#W,zsh},#(basename #{pane_current_path}),#(basename #{pane_current_path})(#W)}#[default]'
 set-option -g status-interval 1
 set-option -g renumber-windows on
 
