--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,7 @@ set -s escape-time 0
 set -g status-position bottom
 set -g status-bg colour234
 set -g status-fg colour137
-set -g status-left ''
+set -g status-left "#[fg=colour108,bg=colour237,bold] [#S:#I:#P] "
 set -g status-right ''
 set -g status-right-length 50
 set -g status-left-length 20
@@ -19,6 +19,8 @@ set-option -g window-status-format '#[fg=colour245]#I#{?#{m:#W,zsh},#(basename #
 set-option -g window-status-current-format '#[fg=colour013,bold]#I#{?#{m:#W,zsh},#(basename #{pane_current_path}),#(basename #{pane_current_path})(#W)}#[default]'
 set-option -g status-interval 1
 set-option -g renumber-windows on
+
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 bind h select-pane -L
 bind j select-pane -D
@@ -56,3 +58,19 @@ setw -g mode-keys vi
 bind -T copy-mode-vi C-v send -X rectangle-toggle
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe "pbcopy"
+
+bind -n M-c new-window -c "#{pane_current_path}"
+bind -n M-l next-window
+bind -n M-h previous-window
+
+bind -n M-C new-session
+bind -n M-j switch-client -n
+bind -n M-k switch-client -p
+set -g status-left ''
+
+bind -n M-v split-window -h -c "#{pane_current_path}"
+bind -n M-s split-window -v -c "#{pane_current_path}"
+
+bind -n M-a choose-tree
+bind -n M-e choose-session
+bind -n M-w choose-tree -w
