--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,7 @@ set -s escape-time 0
 set -g status-position bottom
 set -g status-bg colour234
 set -g status-fg colour137
-set -g status-left "#[fg=colour108,bg=colour237,bold] [#S:#I:#P] "
+set -g status-left "#[fg=colour108,bg=colour237,bold] [#S] "
 set -g status-right ''
 set -g status-right-length 50
 set -g status-left-length 20
