--- a/.tmux.conf
+++ b/.tmux.conf
@@ -74,6 +74,9 @@ bind -n M-a choose-tree
 bind -n M-e choose-session
 bind -n M-w choose-tree -w
 
+bind x if "tmux display -p \"#{window_panes}\" | grep ^1\$" \
+    "confirm-before -p \"Kill the only pane? (y/n)\" kill-pane" \
+    "kill-pane"
 
 # https://github.com/christoomey/vim-tmux-navigator {{
 
