--- a/.tmux.conf
+++ b/.tmux.conf
@@ -78,6 +78,8 @@ bind x if "tmux display -p \"#{window_panes}\" | grep ^1\$" \
     "confirm-before -p \"Kill the only pane? (y/n)\" kill-pane" \
     "kill-pane"
 
+bind C-l send-keys 'C-l'
+
 # https://github.com/christoomey/vim-tmux-navigator {{
 
 # Smart pane switching with awareness of Vim splits.
