--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,13 +70,14 @@ bind -n M-k switch-client -p
 bind -n M-v split-window -h -c "#{pane_current_path}"
 bind -n M-s split-window -v -c "#{pane_current_path}"
 
-bind -n M-a choose-tree
 bind -n M-e choose-session
 bind -n M-w choose-tree -w
 
 bind x if "tmux display -p \"#{window_panes}\" | grep ^1\$" \
     "confirm-before -p \"Kill the only pane? (y/n)\" kill-pane" \
     "kill-pane"
+
+bind -n M-x kill-session
 
 bind C-l send-keys 'C-l'
 
