--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,11 +22,10 @@ set-option -g renumber-windows on
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
+# bind h select-pane -L
+# bind j select-pane -D
+# bind k select-pane -U
+# bind l select-pane -R
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
@@ -36,9 +35,6 @@ bind o run-shell "open #{pane_current_path}"
 
 # capture the buffer
 bind-key C command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
-
-# close pane
-bind-key C-x kill-pane
 
 bind-key t last-window
 bind-key m copy-mode
