--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,6 +39,8 @@ bind-key C command-prompt -p 'save history to filename:' -I '~/tmux.history' 'ca
 bind-key t last-window
 bind-key m copy-mode
 
+bind C-k send-keys 'C-k'
+
 bind v split-window -h -c "#{pane_current_path}"
 bind s split-window -v -c "#{pane_current_path}"
 bind-key c new-window -c "#{pane_current_path}"
