--- a/.tmux.conf
+++ b/.tmux.conf
@@ -57,8 +57,8 @@ bind -T copy-mode-vi C-v send -X rectangle-toggle
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe "pbcopy"
 
-bind-key -r < swap-window -t -1
-bind-key -r > swap-window -t +1
+bind -n M-, run "tmux swap-window -t -1 && tmux previous-window"
+bind -n M-. run "tmux swap-window -t +1 && tmux next-window "
 
 bind -n M-c new-window -c "#{pane_current_path}"
 bind -n M-l next-window
