--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
-set-option -g default-terminal screen-256color
-set -g terminal-overrides 'xterm:colors=256,alacritty:RGB'
+set-option -g default-terminal "screen-256color"
+set -g terminal-overrides 'xterm:colors=256,alacritty:RGB,xterm-kitty:RGB'
 
 set -g prefix C-q
 unbind C-b
