--- a/kitty.conf
+++ b/kitty.conf
@@ -4,3 +4,7 @@ font_size 15
 macos_option_as_alt yes
 macos_quit_when_last_window_closed yes
 macos_traditional_fullscreen yes
+
+enable_audio_bell no
+disable_ligatures never
+sync_to_monitor no
