--- a/kitty.conf
+++ b/kitty.conf
@@ -1,5 +1,12 @@
-font_size 15
+font_size 17
 # scrollback_lines 10000
+
+font_family      Ubuntu Mono
+bold_font        Ubuntu Mono Bold
+italic_font      Ubuntu Mono Italic
+bold_italic_font Ubuntu Mono Bold Italic
+
+adjust_line_height  5
 
 macos_option_as_alt yes
 macos_quit_when_last_window_closed yes
