--- a/kitty.conf
+++ b/kitty.conf
@@ -14,3 +14,7 @@ macos_traditional_fullscreen yes
 
 enable_audio_bell no
 sync_to_monitor no
+
+# color -- vim-hybrid
+background #1D1F21
+foreground #C5C8C6
