--- a/.tmux.conf
+++ b/.tmux.conf
@@ -72,7 +72,8 @@ bind -n M-v split-window -h -c "#{pane_current_path}"
 bind -n M-s split-window -v -c "#{pane_current_path}"
 
 bind -n M-e choose-session
-bind -n M-w choose-tree -w
+# bind -n M-w choose-tree -w
+bind -n M-w new-session
 
 bind x if "tmux display -p \"#{window_panes}\" | grep ^1\$" \
     "confirm-before -p \"Kill the only pane? (y/n)\" kill-pane" \
