--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,8 @@ set -g prefix C-q
 unbind C-b
 set -s escape-time 0
 
+set-option -g history-limit 10000
+
 set -g status-position bottom
 set -g status-bg colour234
 set -g status-fg colour137
@@ -22,10 +24,6 @@ set-option -g renumber-windows on
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# bind h select-pane -L
-# bind j select-pane -D
-# bind k select-pane -U
-# bind l select-pane -R
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
@@ -36,7 +34,6 @@ bind o run-shell "open #{pane_current_path}"
 # capture the buffer
 bind-key C command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
 
-bind-key t last-window
 bind-key m copy-mode
 
 bind C-k send-keys 'C-k'
