--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,10 @@
-set-option -g default-terminal "screen-256color"
-set -g terminal-overrides 'xterm:colors=256,alacritty:RGB,xterm-kitty:RGB'
+# set-option -g default-terminal "screen-256color"
+# set-option -g default-terminal "tmux-256color"
+# set -g terminal-overrides 'xterm:colors=256,alacritty:RGB,xterm-kitty:RGB'
+# set-option -ga terminal-overrides ",$TERM:Tc" # tmuxを起動していない時のzshでの$TERMの値を指定
+
+set -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 set -g prefix C-q
 unbind C-b
