--- a/.gitconfig
+++ b/.gitconfig
@@ -26,6 +26,7 @@
     c = commit -v
     p = pull -p
     pr = !gh prc
+    repo = !gh repo view --web
     f = fetch -p
     unstage = !git restore --staged . && echo 'unstaged' && git status --short
     # for safety cancel https://thinca.hatenablog.com/entry/20120924/1348491052
