--- a/.editorconfig
+++ b/.editorconfig
@@ -13,3 +13,10 @@ indent_style = tab
 
 [*.md]
 trim_trailing_whitespace = false
+
+[*.rs]
+end_of_line = lf
+charset = utf-8
+trim_trailing_whitespace = true
+indent_style = space
+indent_size = 4
