--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,7 +61,7 @@ bind -n M-c new-window -c "#{pane_current_path}"
 bind -n M-l next-window
 bind -n M-h previous-window
 
-bind -n M-C new-session
+bind -n M-n new-session
 bind -n M-j switch-client -n
 bind -n M-k switch-client -p
 
@@ -70,7 +70,6 @@ bind -n M-s split-window -v -c "#{pane_current_path}"
 
 bind -n M-e choose-session
 # bind -n M-w choose-tree -w
-bind -n M-w new-session
 
 bind x if "tmux display -p \"#{window_panes}\" | grep ^1\$" \
     "confirm-before -p \"Kill the only pane? (y/n)\" kill-pane" \
@@ -79,6 +78,7 @@ bind x if "tmux display -p \"#{window_panes}\" | grep ^1\$" \
 bind -n M-x kill-session
 
 bind C-l send-keys 'C-l'
+bind -n M-w send-keys 'M-w'
 
 # https://github.com/christoomey/vim-tmux-navigator {{
 
