--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,6 +29,11 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
+bind -r h select-pane -L
+bind -r j select-pane -D
+bind -r k select-pane -U
+bind -r l select-pane -R
+
 bind o run-shell "open #{pane_current_path}"
 
 # capture the buffer
