--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,17 +8,16 @@ set -s escape-time 0
 set-option -g history-limit 10000
 
 set -g status-position bottom
-set -g status-bg colour234
-set -g status-fg colour137
-set -g status-left "#[fg=colour108,bg=colour237,bold] [#S] "
 set -g status-right ''
 set -g status-right-length 50
 set -g status-left-length 20
 
 set-option -g status-position bottom
 
-set-option -g window-status-format '#[fg=colour245]#I:#{?#{m:#W,zsh},#(basename #{pane_current_path}),#(basename #{pane_current_path})(#W)}#F#[default]'
-set-option -g window-status-current-format '#[fg=colour013,bold]#I:#{?#{m:#W,zsh},#(basename #{pane_current_path}),#(basename #{pane_current_path})(#W)}#[default]'
+# set-option -g window-status-format "#[fg=black,bg=default] #I #W "
+# set-option -g window-status-current-format "#[fg=black,bg=default,underscore] #I #W "
+set-option -g window-status-format '#[fg=black,bg=default]#I:#{?#{m:#W,zsh},#(basename #{pane_current_path}),#(basename #{pane_current_path})(#W)}#F#[default]'
+set-option -g window-status-current-format '#[fg=black,bg=default,bold]#I:#{?#{m:#W,zsh},#(basename #{pane_current_path}),#(basename #{pane_current_path})(#W)}#[default]'
 set-option -g status-interval 1
 set-option -g renumber-windows on
 
@@ -35,9 +34,6 @@ bind -r k select-pane -U
 bind -r l select-pane -R
 
 bind o run-shell "open #{pane_current_path}"
-
-# capture the buffer
-bind-key C command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
 
 bind-key m copy-mode
 
@@ -79,32 +75,3 @@ bind -n M-e choose-session
 bind x if "tmux display -p \"#{window_panes}\" | grep ^1\$" \
     "confirm-before -p \"Kill the only pane? (y/n)\" kill-pane" \
     "kill-pane"
-
-bind -n M-x kill-session
-
-bind C-l send-keys 'C-l'
-bind -n M-w send-keys 'M-w'
-
-# https://github.com/christoomey/vim-tmux-navigator {{
-
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
-bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
-bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
-bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
-tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
-if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
-
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'C-\' select-pane -l
-
-## }}
