--- a/.gitconfig
+++ b/.gitconfig
@@ -32,6 +32,7 @@
     unstage = !git restore --staged . && echo 'unstaged' && git status --short
     # for safety cancel https://thinca.hatenablog.com/entry/20120924/1348491052
     cancel = !git commit -a -m 'Temporary commit for cancel' && git reset --hard HEAD~
+    wip = !git add . && git commit -m 'wip'
 [pager]
     log = `brew --prefix git`/share/git-core/contrib/diff-highlight/diff-highlight|less --RAW-CONTROL-CHARS --quiet -c
     show = `brew --prefix git`/share/git-core/contrib/diff-highlight/diff-highlight|less --RAW-CONTROL-CHARS --quiet -c
