--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,11 +1,11 @@
-set -g default-terminal "screen-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -g default-terminal screen-256color
+set -g terminal-overrides 'xterm:colors=256'
 
 set -g prefix C-q
 unbind C-b
 set -s escape-time 0
 
-set-option -g history-limit 10000
+set-option -g history-limit 1000000
 
 set -g status-position bottom
 set -g status-right ''
